--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard,standart]>=0.115.11",
+    "alembic>=1.15.1",
+    "asyncpg>=0.30.0",
+    "fastapi[standart]>=0.115.11",
+    "pydantic-settings>=2.8.1",
+    "sqlalchemy>=2.0.39",
     "uvicorn>=0.34.0",
 ]
