--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.15.1",
     "asyncpg>=0.30.0",
+    "black>=25.1.0",
     "fastapi[standart]>=0.115.11",
     "pydantic-settings>=2.8.1",
     "sqlalchemy>=2.0.39",
