--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.15.1",
     "asyncpg>=0.30.0",
+    "bcrypt==4.0.1",
     "black>=25.1.0",
-    "fastapi[standart]>=0.115.11",
+    "fastapi[standard]>=0.115.11",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.8.1",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.39",
     "uvicorn>=0.20.0",
 ]
