--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
+bcrypt==4.0.1
+black==25.1.0
 certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
@@ -20,10 +22,16 @@ mako==1.3.9
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==24.2
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.6
 pydantic==2.10.6
 pydantic-core==2.27.2
 pydantic-settings==2.8.1
 pygments==2.19.1
+pyjwt==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pyyaml==6.0.2
