--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt==4.0.1",
     "black>=25.1.0",
+    "fastapi-cache2>=0.2.2",
     "fastapi[standard]>=0.115.11",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
+    "redis>=5.2.1",
+    "ruff>=0.11.2",
     "sqlalchemy>=2.0.39",
     "uvicorn>=0.20.0",
 ]
