--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ bcrypt==4.0.1
 black==25.1.0
 certifi==2025.1.31
 click==8.1.8
-colorama==0.4.6
 dnspython==2.7.0
 email-validator==2.2.0
 fastapi==0.115.11
+fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
 greenlet==3.1.1
 h11==0.14.0
@@ -26,23 +26,31 @@ mypy-extensions==1.0.0
 packaging==24.2
 passlib==1.7.4
 pathspec==0.12.1
+pendulum==3.0.0
 platformdirs==4.3.6
 pydantic==2.10.6
 pydantic-core==2.27.2
 pydantic-settings==2.8.1
 pygments==2.19.1
 pyjwt==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pyyaml==6.0.2
+redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.13.2
+ruff==0.11.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.39
 starlette==0.46.1
+time-machine==2.16.0
 typer==0.15.2
 typing-extensions==4.12.2
+tzdata==2025.2
 uvicorn==0.34.0
+uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0.1
