--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,19 @@ services:
     command: redis-server --save 20 1 --loglevel warning
     volumes: 
       - ./cache:/data
+
+  db_test:
+    image: postgres
+    restart: always
+    shm_size: 128mb
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+      POSTGRES_DB: test
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d postgres" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
