--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 alembic==1.15.1
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
 bcrypt==4.0.1
+billiard==4.2.1
 black==25.1.0
+celery==5.5.0
 certifi==2025.1.31
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 dnspython==2.7.0
 email-validator==2.2.0
 fastapi==0.115.11
@@ -17,7 +23,9 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jinja2==3.1.6
+kombu==5.5.2
 mako==1.3.9
 markdown-it-py==3.0.0
 markupsafe==3.0.2
@@ -27,12 +35,18 @@ packaging==24.2
 passlib==1.7.4
 pathspec==0.12.1
 pendulum==3.0.0
+pillow==11.1.0
 platformdirs==4.3.6
+pluggy==1.5.0
+prompt-toolkit==3.0.50
 pydantic==2.10.6
 pydantic-core==2.27.2
 pydantic-settings==2.8.1
 pygments==2.19.1
 pyjwt==2.10.1
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-dotenv==0.5.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
@@ -45,6 +59,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.39
+sqlalchemy-utils==0.41.2
 starlette==0.46.1
 time-machine==2.16.0
 typer==0.15.2
@@ -52,5 +67,7 @@ typing-extensions==4.12.2
 tzdata==2025.2
 uvicorn==0.34.0
 uvloop==0.21.0
+vine==5.1.0
 watchfiles==1.0.4
+wcwidth==0.2.13
 websockets==15.0.1
