--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pillow>=11.1.0",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
+    "pyright>=1.1.398",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
     "pytest-dotenv>=0.5.2",
@@ -30,3 +31,6 @@ dependencies = [
 dev = [
     "pytest>=8.3.5",
 ]
+
+[tool.ruff]
+line-length = 88
