--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ dependencies = [
     "celery>=5.5.0",
     "fastapi-cache2>=0.2.2",
     "fastapi[standard]>=0.115.11",
+    "flower>=2.0.1",
     "greenlet>=3.1.1",
     "mypy>=1.15.0",
     "passlib[bcrypt]>=1.7.4",
     "pillow>=11.1.0",
+    "pydantic-core>=2.27.2",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
     "pyright>=1.1.398",
@@ -25,7 +27,7 @@ dependencies = [
     "redis>=5.2.1",
     "ruff>=0.11.2",
     "sqlalchemy>=2.0.39",
-    "uvicorn>=0.20.0",
+    "uvicorn>=0.34.0",
 ]
 
 [dependency-groups]
