--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,13 @@ email-validator==2.2.0
 fastapi==0.115.11
 fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
+flower==2.0.1
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
+humanize==4.12.2
 idna==3.10
 iniconfig==2.1.0
 jinja2==3.1.6
@@ -30,7 +32,9 @@ mako==1.3.9
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
+mypy==1.15.0
 mypy-extensions==1.0.0
+nodeenv==1.9.1
 packaging==24.2
 passlib==1.7.4
 pathspec==0.12.1
@@ -38,18 +42,21 @@ pendulum==3.0.0
 pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
+prometheus-client==0.21.1
 prompt-toolkit==3.0.50
 pydantic==2.10.6
 pydantic-core==2.27.2
 pydantic-settings==2.8.1
 pygments==2.19.1
 pyjwt==2.10.1
+pyright==1.1.398
 pytest==8.3.5
 pytest-asyncio==0.26.0
 pytest-dotenv==0.5.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
+pytz==2025.2
 pyyaml==6.0.2
 redis==5.2.1
 rich==13.9.4
@@ -59,9 +66,9 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.39
-sqlalchemy-utils==0.41.2
 starlette==0.46.1
 time-machine==2.16.0
+tornado==6.4.2
 typer==0.15.2
 typing-extensions==4.12.2
 tzdata==2025.2
