ci: add env and test_env to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ stages:
 
 build-job:
   stage: build
+  before-script: 
+    - cp ${PROD-ENV} .env
+    - cp ${TEST-ENV} .env-test
   script:
     - docker build -t booking-api-image .
 
