--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ stages:
 build-job:
   stage: build
   before_script: 
-    - cp ${PROD-ENV} .env
-    - cp ${TEST-ENV} .env-test
+    - cp ${PROD_ENV} .env
+    - cp ${TEST_ENV} .env-test
   script:
     - docker build -t booking-api-image .
 
